--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -59,7 +59,10 @@ tooltip {
 #network,
 #workspaces,
 #tray,
-#backlight {
+#backlight,
+#cpu,
+#memory
+{
     background: #1e1e2e;
     padding: 0px 10px;
     margin: 3px 0px;
@@ -142,4 +145,8 @@ tooltip {
     border-radius: 0px 10px 10px 0px;
     border-right: 0px;
     margin-left: 0px;
+}
+
+#language {
+    font-size: 20px;
 }
